--- a/www/index.html
+++ b/www/index.html
@@ -27,6 +27,7 @@
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
          <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+         <script type="text/javascript" src="js/main.js"></script>
         <script type="text/javascript" src="js/jquery.mobile-1.4.5.js"></script>
          <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.5.css" />
        <!--<link rel="stylesheet" type="text/css" href="css/index.css" />-->
@@ -55,7 +56,7 @@
                 <div data-role="header">header</div> 
                     <div data-role="content">
                          Dit is dan view 2.
-                        <p>Terug naar view 1</p>
+                        <p><a href="#init">Terug naar view 1</a></p>
                      </div> 
                 <div data-role="footer">footer</div> 
             </div>
@@ -69,8 +70,7 @@
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript" src="js/main.js"></script>
-        <script type="text/javascript">
+         <script type="text/javascript">
             app.initialize();
         </script>
     </body>
