--- a/www/index.html
+++ b/www/index.html
@@ -70,8 +70,9 @@
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
-         <script type="text/javascript">
+         <!-- <script type="text/javascript">
             app.initialize();
         </script>
+-->
     </body>
 </html>
