--- a/www/index.html
+++ b/www/index.html
@@ -30,7 +30,7 @@
          <script type="text/javascript" src="js/main.js"></script>
         <script type="text/javascript" src="js/jquery.mobile-1.4.5.js"></script>
          <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.5.css" />
-       <!--<link rel="stylesheet" type="text/css" href="css/index.css" />-->
+       <link rel="stylesheet" type="text/css" href="css/index.css" />
        
          
         <title>Hello World</title>
